crates/ruff_python_parser/tests/snapshots/invalid_syntax@tstring_py313.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/tstring_py313.py
---
## AST

```
Module(
    ModModule {
        range: 0..56,
        body: [
            Expr(
                StmtExpr {
                    range: 46..55,
                    value: TString(
                        ExprTString {
                            range: 46..55,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 46..55,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 48..54,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 49..53,
                                                                id: Name("name"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target-version": "3.13" }
2 | t'{name}'
  | ^^^^^^^^^ Syntax Error: Cannot use t-strings on Python 3.13 (syntax was added in Python 3.14)
  |
